--- a/mw_styles.css
+++ b/mw_styles.css
@@ -25,19 +25,21 @@ body {
 
 /*nav styles */
 
-nav {
+nav ul {
   background-color: rgb(125, 120, 89);
   line-height: 3em;
-}
-
-nav ul {
   list-style-type: none;
 }
 
 nav ul li a {
-  color: #FFFFFF;
+  color: white;
   color: rgba(255, 255, 255, 0.5);
   text-decoration: none;
+}
+
+nav ul li a:hover {
+  color: rgba(255, 255, 255, 1);
+  color: yellow;
 }
 
 nav ul li:hover {
@@ -45,18 +47,56 @@ nav ul li:hover {
   list-style-image: url(wheelmarker.png);
 }
 
-nav ul li:hover {
-  color: rgba(255, 255, 255, 1);
-  color: #fcf802;
-}
-
-
 /*section styles */
 
-#leftsection {
+#leftsection > p {
   font-size: 22px;
 }
 
 #firstpar:first-line {
   text-transform: uppercase;
+}
+
+#rightsection > h1 {
+  font-size: 22px;
+  letter-spacing: 3px;
+  font-weight: normal;
+  text-align: center;
+}
+
+#rightsection > h2 {
+  font-size: 18px;
+  text-align: right;
+  font-weight: normal;
+}
+
+#rightsection > p {
+  color: gray;
+  font-size: 14px;
+  text-align: justify;
+}
+
+/*blockquote styles */
+
+blockquote {
+  background-color: rgb(131, 121, 36);
+  color: white;
+  font-size: 16px;
+  font-family: "Comic Sans MS", Times, cursive;
+}
+
+blockquote p:before {
+  content: open-quote;
+}
+
+blockquote p:after {
+  content: close-quote;
+}
+
+/*footer styles*/
+
+footer address {
+  font-size: 16px;
+  font-style: normal;
+  text-align: center;
 }
